<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#FFDE03"
                    android:gravity="center_vertical"
                    android:padding="48dp"
                    android:text="@string/app_sub_title"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/start_now_button_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFDE03"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/start_now_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="24dp"
                    android:layout_weight="2"
                    android:onClick="startQuiz"
                    android:paddingLeft="24dp"
                    android:paddingRight="24dp"
                    android:text="@string/start_button"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/questions_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFADB"
                android:orientation="vertical"
                android:visibility="invisible">

                <LinearLayout style="@style/AnswerLayoutStyle">

                    <TextView
                        android:id="@+id/question_1"
                        style="@style/QuestionStyle"
                        android:text="@string/question_1" />

                    <RadioGroup
                        android:id="@+id/answer1_radio_group"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RadioButton
                            android:id="@+id/answer1_yes_radio_button"
                            style="@style/AnswerStyle"
                            android:text="@string/answer_1a" />

                        <RadioButton
                            android:id="@+id/answer1_no_radio_button"
                            style="@style/AnswerStyle"
                            android:text="@string/answer_1b" />

                    </RadioGroup>
                </LinearLayout>

                <LinearLayout style="@style/AnswerLayoutStyle">

                    <TextView
                        android:id="@+id/question_2"
                        style="@style/QuestionStyle"
                        android:text="@string/question_2" />

                    <CheckBox
                        android:id="@+id/answer2a_checkbox"
                        style="@style/AnswerStyle"
                        android:text="@string/answer_2a" />

                    <CheckBox
                        android:id="@+id/answer2b_checkbox"
                        style="@style/AnswerStyle"
                        android:text="@string/answer_2b" />

                    <CheckBox
                        android:id="@+id/answer2c_checkbox"
                        style="@style/AnswerStyle"
                        android:text="@string/answer_2c" />

                    <CheckBox
                        android:id="@+id/answer2d_checkbox"
                        style="@style/AnswerStyle"
                        android:text="@string/answer_2d" />

                </LinearLayout>

                <LinearLayout style="@style/AnswerLayoutStyle">

                    <TextView
                        android:id="@+id/question_3"
                        style="@style/QuestionStyle"
                        android:text="@string/question_3" />

                    <RadioGroup
                        android:id="@+id/answer3_radio_group"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RadioButton
                            android:id="@+id/answer3_red_radio_button"
                            style="@style/AnswerStyle"
                            android:text="@string/answer_3a" />

                        <RadioButton
                            android:id="@+id/answer3_yellow_radio_button"
                            style="@style/AnswerStyle"
                            android:text="@string/answer_3b" />

                        <RadioButton
                            android:id="@+id/answer3_white_radio_button"
                            style="@style/AnswerStyle"
                            android:text="@string/answer_3c" />

                        <RadioButton
                            android:id="@+id/answer3_blue_radio_button"
                            style="@style/AnswerStyle"
                            android:text="@string/answer_3d" />

                    </RadioGroup>
                </LinearLayout>

                <LinearLayout style="@style/AnswerLayoutStyle">

                    <TextView
                        android:id="@+id/question_4"
                        style="@style/QuestionStyle"
                        android:text="@string/question_4" />

                    <RadioGroup
                        android:id="@+id/answer4_radio_group"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RadioButton
                            android:id="@+id/answer4a_radio_button"
                            style="@style/AnswerStyle"
                            android:text="@string/answer_4a" />

                        <RadioButton
                            android:id="@+id/answer4b_radio_button"
                            style="@style/AnswerStyle"
                            android:text="@string/answer_4b" />

                        <RadioButton
                            android:id="@+id/answer4c_radio_button"
                            style="@style/AnswerStyle"
                            android:text="@string/answer_4c" />

                        <RadioButton
                            android:id="@+id/answer4d_radio_button"
                            style="@style/AnswerStyle"
                            android:text="@string/answer_4d" />

                    </RadioGroup>
                </LinearLayout>

                <LinearLayout style="@style/AnswerLayoutStyle">

                    <TextView
                        android:id="@+id/question_5"
                        style="@style/QuestionStyle"
                        android:text="@string/question_5" />

                    <EditText
                        android:id="@+id/answer5_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:inputType="textCapCharacters" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <Button
                        android:id="@+id/submit_button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:onClick="submitAnswers"
                        android:paddingLeft="24dp"
                        android:paddingRight="24dp"
                        android:text="@string/submit_button"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

    </ScrollView>
</RelativeLayout>